# OpenGLGames

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt
base/src/: main.c
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
pong/: CMakeLists.txt
pong/src/: main.c
